hphp/hack/test/typecheck/inout/bad_inout_use_lvalue4.php.exp
File "bad_inout_use_lvalue4.php", line 10, characters 5-35:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue4.php", line 4, characters 9-25:
Please add a type hint (Naming[2035])
File "bad_inout_use_lvalue4.php", line 10, characters 11-35:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
